clusters/loudnova/platform/networking/envoy-gateway/runtime/gatewayclass.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: GatewayClass
metadata:
  name: eg
  labels:
    app.kubernetes.io/name: eg
    app.kubernetes.io/part-of: loudnova-platform
spec:
  controllerName: gateway.envoyproxy.io/gatewayclass-controller
